# open-discourse

./: .editorconfig  .flake8  .gitignore  DOCKER_SETUP.md  LICENSE  README.md  Readme.md  build_open_discourse_data.py  distribute_docker_images.sh  docker-compose.yml  path_definitions.py  requirements.txt  run_docker.rtf  setup.sh  spoken.csv  tsconfig.base.json  tsconfig.eslint.json
python/: ExecutionGraph.drawio  Makefile  README.md  build.sh  build_open_discourse_data.py  pyproject.toml  requirements.txt  setup.sh
python/open_discourse/: README.md
python/open_discourse/01_preprocessing/: 01_download_raw_data.py  02_download_raw_data_electoral_term_19_20.py  03_split_xml.py  04_split_xml_electoral_term_1_and_2.py  05_split_xml_electoral_term_19_20.py  06_extract_mps_from_mp_base_data.py  07_create_electoral_terms.py
python/open_discourse/02_factions/: 01_create_factions.py  02_add_abbreviations_and_ids.py
python/open_discourse/03_politicians/: 01_add_faction_id_to_mps.py  02_scrape_mgs.py  03_merge_politicians.py
python/open_discourse/04_speech_content/: 01_extract_speeches.py  02_clean_speeches.py  03_match_names_speeches.py
python/open_discourse/05_electoral_term_19_20/: 01_extract_speeches_and_contributions_electoral_term_19_20.py
python/open_discourse/06_contributions/: 01_extract_contributions.py  02_clean_contributions_extended.py  03_match_contributions_extended.py
python/open_discourse/07_database/: 01_concat_everything.py  02_upload_data_to_database.py
python/src/: README.md  __init__.py  setup.py
python/src/lda/: upload_data_cube.py
(+218 files in other folders)
